--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 4px;
+  margin: 0 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ffffff25;
+  border-radius: 6px;
+  background-clip: content-box;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent; 
+  margin: 20px 0; 
+}
+
 @font-face {
   font-family: 'Gilroy';
   src: url('../fonts/Gilroy-Extrabold.woff2') format('woff2');
